--- a/tree_dump.html
+++ b/tree_dump.html
@@ -1,1 +1,1 @@
-<pre><img src = "img/graph.png", style = " max-width: 95vw "><hr>
+<pre><img src = "img/graph.png", style = " max-width: 95vw "><hr><pre><img src = "img/graph.png", style = " max-width: 95vw "><hr>
